controlador de llenado

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 <header>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark animate__animated animate__fadeInTopLeft">
-        <a class="navbar-brand" href="#">Navbar</a>
+        <a id="tituloNavbar" class="navbar-brand" href="#">Navbar</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -66,8 +66,16 @@
     </nav>
 </header>
 
+<section>
+    <h4 id="a" class="Verdolaga">Deportivo Tapitas</h4>
+    <img src="/img/papolin.jpg" alt="papolin" id="papolin">
+</section>
+
+<footer>
+
+</footer>
 <body>
-<script src="/js/controladortienda.js"></script>
+<script src="/js/llenadoTienda.js"></script>
 </body>
 
 </html>
