--- a/index.html
+++ b/index.html
@@ -71,10 +71,13 @@
     <img src="/img/papolin.jpg" alt="papolin" id="papolin">
 </section>
 
+
+<body>
 <footer>
 
 </footer>
-<body>
+
+<button id="boton" type="button" class="btn btn-info">Click</button>
 <script src="/js/llenadoTienda.js"></script>
 </body>
 
